# nepomukrecommendation

./: CMakeLists.txt  README
doc/: CMakeLists.txt
src/: CMakeLists.txt  Messages.sh  main.cpp  nepomukrecommendation.cpp  nepomukrecommendation.desktop  nepomukrecommendation.h  nepomukrecommendation.kcfg  nepomukrecommendationui.rc  nepomukrecommendationview.cpp  nepomukrecommendationview.h  nepomukrecommendationview_base.ui  settings.kcfgc
